--- a/todo.scss
+++ b/todo.scss
@@ -1,47 +1,107 @@
+$main-color: #ce6b6b;
+$main-padding: 15px;
 body {
     padding: 0;
     margin: 0;
+    font-family: cursive;
 }
+
 * {
     box-sizing: border-box;
+    word-break: break-all;
 }
 header {
-    // padding: 10px;
-    background-color: #98e0ff;
-    padding: 2% 10px;
+    // background-color: #98e0ff;
+    background-color: $main-color;
+    color: #fff;
+    padding: $main-padding 10px;
 
     .contanier {
     }
     p {
         text-align: center;
-        font-family: cursive;
-        font-size: clamp(10px, 5vw, 40px);
+        font-size: 2em;
         margin: auto;
     }
 }
+.container {
+    padding-right: 15px;
+    padding-left: 15px;
+    margin: auto;
 
+    // Small devices (landscape phones, 576px and up)
+    @media (min-width: 576px) {
+        max-width: 540px;
+    }
+
+    // Medium devices (tablets, 768px and up)
+    @media (min-width: 768px) {
+        max-width: 720px;
+    }
+
+    // Large devices (desktops, 992px and up)
+    @media (min-width: 992px) {
+        max-width: 960px;
+    }
+
+    // Extra large devices (large desktops, 1200px and up)
+    @media (min-width: 1200px) {
+        max-width: 1140px;
+    }
+
+    @media (min-width: 1400px) {
+        max-width: 1320px;
+    }
+}
 main {
-    .contanier {
-        display: flex;
-        flex-wrap: wrap;
-        justify-content: space-evenly;
+    min-height: calc(100vh - 66.8px - 66.8px);
+    background-color: #f7f7f7;
+    padding: $main-padding 0;
+
+    .container {
+        display: grid;
+        grid-template-columns: repeat(auto-fit, minmax(300px, 500px));
+        gap: 20px;
+        justify-content: space-around;
     }
     .todo--outer--container {
+        display: flex;
+        flex-direction: column;
         background: #f0f0f0;
-        padding: 20px;
-        text-align: center;
+        padding: $main-padding;
+        height: fit-content;
+        border-radius: 10px;
     }
 
-    #add--todo {
-        margin: 20px auto;
-        max-width: 400px;
+    #addTodo {
+        font-size: 1.2em;
         display: flex;
         justify-content: space-between;
+        flex-wrap: wrap;
         align-items: center;
-        input#addTodo {
+        min-height: 35px;
+
+        input#addTodoInput {
+            min-height: 35px;
             border: none;
-            height: 30px;
+            outline: none;
             border-radius: 7px;
+            padding: 0 10px;
+            box-shadow: 0px 0px 4px 1px #dadada;
+            margin: 10px auto;
+            max-width: 100%;
+        }
+        button {
+            min-height: 35px;
+            background: $main-color;
+            color: #fff;
+            border: none;
+            border-radius: 5px;
+            padding: 0 20px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            margin: 10px auto;
         }
     }
 
@@ -50,22 +110,53 @@ main {
         margin: auto;
     }
 
-    .todo--item {
-        display: flex;
-        // justify-content: space-evenly;
-        align-items: center;
+    #todoDoneItems {
+        padding: 10px $main-padding;
+        background: #f0f0f0;
+        border-radius: 10px;
+        height: fit-content;
+    }
+    h3 {
+        text-align: center;
+    }
+}
+.todo--item {
+    display: flex;
+    align-items: center;
+    margin: 10px 0;
+    background-color: #fff;
+    padding: 10px;
+    border-radius: 7px;
+    box-shadow: 0px 0px 5px $main-color;
+    font-size: 1.2em;
+}
+.todo--item--text {
+    flex: 1;
+}
+.todo--item--done {
+    display: flex;
+    align-items: center;
+    margin: 0 10px;
+    input {
+        accent-color: $main-color;
+        width: 18px;
+        min-height: 18px;
     }
 }
 
 footer {
-    background: black;
+    background: $main-color;
     color: #fff;
     text-align: center;
-    padding: 10px 10px;
-    font-family: fantasy;
-    letter-spacing: 5px;
-    // position: absolute;
-    // bottom: 0;
+    padding: $main-padding 10px;
+    // letter-spacing: 5px;
     width: 100%;
-    font-size: clamp(10px, 5vw, 40px);
+    font-size: 2em;
+    p {
+        margin: 0;
+    }
+}
+
+.error {
+    border: 3px solid #ffaeae !important;
 }
