--- a/css/todo.scss
+++ b/css/todo.scss
@@ -90,6 +90,7 @@ main {
             box-shadow: 0px 0px 4px 1px #dadada;
             margin: 10px auto;
             max-width: 100%;
+            caret-color: $main-color;
         }
         button {
             min-height: 35px;
